# b0xx-updater-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
assets/: hardware.toml
assets/hex/: B0XX_r1_2.11.hex  B0XX_r1_2.13.hex  B0XX_r1_2.14.hex
src/: device.rs  error.rs  main.rs  patcher.rs
